2003-08-16  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Kludge:  Don't use sfx 123 for weapons in
	SI; use 61 instead.

2003-08-15  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapefile.cc (Image_file_info): Write out single-shape
	files correctly.
	* data/estudio/new:  Added (primitive) fonts.vga, pointers.shp.

2003-08-14  Ryan Nunn  <colourles@users.sourceforge.net>
	* usecode/intrinsics.cc, usecode/siintrinsics.h, usecode/ucinternal.h :
	  B5 Intrinsic in SI (modify_schedule)

2003-0813	Darke	<darkepaw@users.sf.net>
	* usecode/ucxt/head2data.cc: Updated to append function number
	  to the end of UNKNOWN functions.

2003-08-11  Ryan Nunn  <colourles@users.sourceforge.net>
	* gamemap.cc : Fixing the item duplication problem. h4XoRz beware we'll
	  be deleting all accounts of people exploiting this bug in the period
	  till next release, or something... oh wait... Exult isn't a MMORPG.

2003-08-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: 1.1beta2

2003-08-08 Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* data/exultmsg_fr.txt: added French translation of exultmsg.txt. Now
	Exult only needs to support it. ;-)

2003-08-06 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/exultmsg_de.txt: added German translation of exultmsg.txt. Now
	Exult only needs to support it.

2003-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: create <SAVEGAME>

2003-08-02  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc:  Rewrote Preach schedule.
	* usecode/ucsched.cc:  Fixed the add(int, char*) method.

2003-07-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed memory corruption issue breaking item descriptions

2003-07-29  Aurelien Marchand  <artaxerxes@users.sourceforge.net>
	* README.Qtopia: More accurate details.

2003-07-25  Ryan Nunn  <colourles@users.sourceforge.net>
	* WinNT and Win2K are forced to use the Win9x style IPC that i wrote. 